# mingw_linux_template

./: CMakeLists.txt  LICENSE  README.md
src/: test.c
